(ref) Ajuste de testes para novas regras de perfis e Roles